--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "roadhog",
-  "version": "2.5.0-beta.4",
+  "name": "av-roadhog",
+  "version": "0.0.1",
   "description": "Cli tool for creating react apps, configurable version of create-react-app.",
   "bin": {
     "roadhog": "./bin/roadhog.js"
@@ -41,7 +41,7 @@
     "@babel/core": "^7.0.0",
     "@babel/polyfill": "^7.0.0",
     "@babel/runtime": "^7.0.0",
-    "af-webpack": "^0.23.0-beta.1",
+    "av-webpack": "^0.0.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-umi": "^1.0.0",
     "bigbrother-webpack-plugin": "^1.1.2",
